--- a/LGPL/CommonSoftware/ACSLaser/baciPropsTest/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/baciPropsTest/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/alarmsysteminterface.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/testComponent.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsalarmSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/JavaContainerError.jar"/>
@@ -20,5 +20,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/baci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscomponent.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="output" path="object/baciAlTest"/>
 </classpath>
