--- a/LGPL/CommonSoftware/acscallbacks/.classpath
+++ b/LGPL/CommonSoftware/acscallbacks/.classpath
@@ -16,5 +16,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsalarmSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-lang-2.5.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
