--- a/LGPL/CommonSoftware/jcont/.classpath
+++ b/LGPL/CommonSoftware/jcont/.classpath
@@ -39,5 +39,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsCallbacksSupport.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
