--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.6 2011/08/22 09:51:16 rtobar Exp $"
+# "@(#) $Id: Makefile,v 1.7 2011/08/24 09:31:50 bjeram Exp $"
 #
 # Makefile of ........
 #
@@ -223,8 +223,19 @@ endif
 #
 # TARGETS
 # -------
+
+ifdef NDDSHOME
 all:	do_all
 	@echo " . . . 'all' done" 
+else
+.DEFAULT_GOAL := all	
+all: 
+	@echo " NDDSHOME not defined nothing to be done for target all!" 
+ 
+test: 
+	@echo " NDDSHOME not defined nothing to be done for target test!" 
+
+endif
 
 clean : clean_all 
 	@echo " . . . clean done"
