--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.8 2011/08/24 09:33:46 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.9 2011/08/24 10:44:38 bjeram Exp $"
 #
 # Makefile of ........
 #
@@ -102,7 +102,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       =
+SCRIPTS_L       = bulkDataNTTATEnv
 
 #
 # TCL scripts (public and local)
@@ -226,10 +226,8 @@ endif
 
 ifdef NDDSHOME
 all:	do_all
+	@mkdir -p tmp
 	@echo " . . . 'all' done" 
-
-test: 
-	@echo " Not yet integrated!" 
 else
 .DEFAULT_GOAL := all	
 all: 
@@ -237,13 +235,13 @@ all:
  
 test: 
 	@echo " NDDSHOME not defined nothing to be done for target test!" 
-
 endif
 
 clean : clean_all 
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
+	@rm -rf tmp
 	@echo " . . . clean_dist done"
 
 man   : do_man 
