--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.9 2011/08/24 10:44:38 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.10 2011/08/24 16:37:20 bjeram Exp $"
 #
 # Makefile of ........
 #
@@ -242,6 +242,7 @@ clean : clean_all
 
 clean_dist : clean_all clean_dist_all 
 	@rm -rf tmp
+	@rm -rf tatlogs
 	@echo " . . . clean_dist done"
 
 man   : do_man 
